@@ -18,3 +18,8 @@ Story: Getting correct output
     And the stdout should not match "Loaded suite"
     And the stdout should not match /\d+ tests, \d+ assertions, \d+ failures, \d+ errors/m
     And the stdout should match "1 example, 0 failures"
+
+  Scenario: Tweak backtrace
+    Given the file stories/failing_story.rb
+    When I run it with the ruby interpreter
+    Then the stdout should not match /\/lib\/spec\//
