@@ -1,3 +1,7 @@
+== Trunk
+
+* Applied patch from Ian Dees to quiet the Story Runner backtrace. Closes LH[#183].
+
 == Version 1.1.1
 
 Bug fix release.
